--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,29 +1,11 @@
 pipeline {
-    agent { label 'jenkins-agent' }
-    tools {
-        jdk 'java17'
-        maven 'Maven3'
+  agent any
+  stages {
+    stage('checkout') {
+      steps {
+        git(url: 'https://github.com/ramanaambati/jenkins-java-project.git', branch: 'master')
+      }
     }
-    stages {
-        stage("Cleanup Workspace") {
-            steps {
-                cleanWs()
-            }
-        }
-        stage("Checkout from SCM") {
-            steps {
-                git branch: 'main', credentialsId: 'github', url: 'https://github.com/ramanaambati/devops-project.git'
-            }
-        }
-        stage("Build Application") {
-            steps {
-                sh "mvn clean package"
-            }
-        }
-        stage("Test Application") {
-            steps {
-                sh "mvn test"
-            }
-        }
-    }
+
+  }
 }
